Pet Shop recycler view now works

--- a/app/src/main/res/layout/shop_pets_template.xml
+++ b/app/src/main/res/layout/shop_pets_template.xml
@@ -1,28 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#3D4F2B">
 
-        <ImageView
-            android:id="@+id/ivShopPetIcon"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:background="#3D4F2B"
-            android:padding="80dp"
+        <ImageButton
+            android:id="@+id/ibBuyPet"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:backgroundTint="#3D4F2B"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tvPetEffect"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/button_buy" />
+
+        <TextView
+            android:id="@+id/tvPetEffect"
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:fontFamily="@font/apple_kid"
+            android:text="TextView"
+            android:textColor="#EEFFCC"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/ibBuyPet"
+            app:layout_constraintStart_toEndOf="@+id/ivPetIcon"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline22"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="411dp"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintGuide_percent="0.1"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:id="@+id/ivPetIcon"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="24dp"
+            app:layout_constraintBottom_toTopOf="@+id/tvPetName"
+            app:layout_constraintStart_toStartOf="@+id/guideline22"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/pet_dog" />
 
+        <TextView
+            android:id="@+id/tvPetName"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:fontFamily="@font/apple_kid"
+            android:text="TextView"
+            android:textColor="#EEFFCC"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline22"
+            app:layout_constraintTop_toBottomOf="@+id/ivPetIcon" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</GridLayout>
+</LinearLayout>
