--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -12,6 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="700dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="10dp"
         android:fontFamily="@font/apple_kid"
         android:text="@string/tutorial_text"
